# data-hoarder

./: .gitignore  Data Hoarder WPF.slnx  GUI.py  SettingsPage.py  SettingsPage_Manage.py  YtDlpPage.py  YtDlpPage_Manage.py  config_manager.py  data_hoarder.db  db_manager.py  main.py  mainwindow.ui  pyproject.toml  ui_design.py  ui_mainwindow.py  yt_dlp_addChannel.py
Data Hoarder WPF [yt-dlp]/: App.xaml  App.xaml.cs  Data Hoarder WPF [yt-dlp].csproj  MainWindow.xaml  MainWindow.xaml.cs
Data Hoarder WPF [yt-dlp]/Models/: Channel.cs  Video.cs
Data Hoarder WPF [yt-dlp]/Services/: DatabaseService.cs  YoutubeServices.cs
Data Hoarder WPF [yt-dlp]/ViewModels/: DashboardViewModel.cs
Data Hoarder WPF [yt-dlp]/Views/: DashboardPage.xaml  DashboardPage.xaml.cs  DownloadsPage.xaml  DownloadsPage.xaml.cs  LibraryPage.xaml  LibraryPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
ui/: StyleSheets.py  custom_widgets.py  ui_utils.py
